--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,21 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  flutter_redux: ^0.5.3
+  shared_preferences: ^0.5.1+2
+  redux_thunk: ^0.2.0
+  http: ^0.12.0
+  fluttertoast: ^3.0.3
+  smooth_star_rating: 1.0.2
+  flutter_swiper: ^1.1.4
+  charts_flutter: ^0.5.0
+  google_maps_flutter: ^0.5.12
+  geocoder: ^0.1.2
+  rxdart: ^0.16.7
+  map_view: ^0.0.14
+  share: ^0.6.1+1
+
+
 
 dev_dependencies:
   flutter_test:
@@ -39,6 +54,10 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+  - images/img1.jpg
+  - images/img2.jpg
+  - images/img3.jpg
 
   # To add assets to your application, add an assets section, like this:
   # assets:
