--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,11 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  flutter_launcher_icons: "^0.7.0"
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "images/pattern.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
