--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,8 +17,11 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
+
   flutter:
     sdk: flutter
+
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -33,9 +36,10 @@ dependencies:
   charts_flutter: ^0.5.0
   google_maps_flutter: ^0.5.12
   geocoder: ^0.1.2
-  rxdart: ^0.16.7
   map_view: ^0.0.14
   share: ^0.6.1+1
+  google_maps_webservice: ^0.0.14
+  flutter_google_places: ^0.2.2
 
 
 
