--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ flutter:
   - images/img1.jpg
   - images/img2.jpg
   - images/img3.jpg
+  - images/desc.txt
 
   # To add assets to your application, add an assets section, like this:
   # assets:
