--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   share: ^0.6.1+1
   google_maps_webservice: ^0.0.14
   flutter_google_places: ^0.2.2
+  image_picker: ^0.6.0+8
 
 
 
