--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -52,7 +52,8 @@ flutter {
 
 dependencies {
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jre7:1.2.41'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+   // implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation "com.android.support:appcompat-v7:28.0.0"
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.1'
     implementation project(":onlinechatsdk")
 }
