--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   google_maps_webservice: ^0.0.14
   flutter_google_places: ^0.2.2
   image_picker: ^0.6.0+8
+  carousel_slider: ^1.3.0
   intro_views_flutter:
 
 
