--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,10 @@ flutter:
   - images/delivery_terms.txt
   - images/fag.txt
   - images/smwallet/
+  - assets/locale/localization_en.json
+  - assets/locale/localization_ru.json
+  - assets/locale/localization_az.json
+
 
   # To add assets to your application, add an assets section, like this:
   # assets:
