--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_google_places: ^0.2.2
   image_picker: ^0.6.0+8
   carousel_slider: ^1.3.0
+  zoomable_image: ^1.3.1
   intro_views_flutter:
 
 
