--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   image_picker: ^0.6.0+8
   carousel_slider: ^1.3.0
   zoomable_image: ^1.3.1
+  cached_network_image: ^1.0.0
   intro_views_flutter:
 
 
