--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   carousel_slider: ^1.3.0
   zoomable_image: ^1.3.1
   cached_network_image: ^1.0.0
+  flutter_markdown: ^0.2.0
+  html2md: ^0.3.1
   intro_views_flutter:
 
 
