--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,7 @@ dependencies:
   flutter_google_places: ^0.2.2
   image_picker: ^0.6.0+8
   carousel_slider: ^1.3.0
-  zoomable_image: ^1.3.1
+  #zoomable_image: ^1.3.1
   cached_network_image: ^1.0.0
   flutter_markdown: ^0.2.0
   html2md: ^0.3.1
