--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   flutter_markdown: ^0.2.0
   html2md: ^0.3.1
   photo_view: ^0.5.0
+  flutter_calendar: ^0.0.3
   intro_views_flutter:
 
 
