--- a/android/key.properties
+++ b/android/key.properties
@@ -1,4 +1,4 @@
 storePassword=kenddenshehere
 keyPassword=kenddenshehere
 keyAlias=key
-storeFile=C:/SINAM/kendden_shehere/Keystore/key.jks
+storeFile=C:/Users/John Doe/Desktop/Mobile applications/kendden_shehere/Keystore/key.jks
