--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   photo_view: ^0.5.0
   flutter_calendar: ^0.0.3
   async: ^2.3.0
+# webview_flutter: ^0.3.14+1
+  flutter_webview_plugin: ^0.3.8
   intro_views_flutter:
 
 
