--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,25 +32,23 @@ dependencies:
   shared_preferences: ^0.5.1+2
   redux_thunk: ^0.2.0
   http: ^0.12.0
-  fluttertoast: ^3.0.3
+  #fluttertoast: ^3.0.3
   smooth_star_rating: 1.0.2
-  flutter_swiper: ^1.1.4
-  charts_flutter: ^0.5.0
+  #flutter_swiper: ^1.1.4
+  #charts_flutter: ^0.5.0
   google_maps_flutter: ^0.5.15
-  geocoder: ^0.1.2
+  #geocoder: ^0.1.2
   #map_view: ^0.0.14
   share: ^0.6.1+1
-  google_maps_webservice: ^0.0.14
+  #google_maps_webservice: ^0.0.14
   flutter_google_places: ^0.2.2
   image_picker: ^0.6.0+8
   carousel_slider: ^1.3.0
   #zoomable_image: ^1.3.1
-  cached_network_image: ^1.0.0
   flutter_markdown: ^0.2.0
   html2md: ^0.3.1
   photo_view: ^0.5.0
   flutter_calendar: ^0.0.3
-  async: ^2.3.0
 # webview_flutter: ^0.3.14+1
   flutter_webview_plugin: ^0.3.8
   dio: ^3.0.3
@@ -76,21 +74,7 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   assets:
-  - images/img1.jpg
-  - images/img2.jpg
-  - images/img3.jpg
   - images/noimage.png
-  - images/map.png
-  - assets/desc.txt
-  - assets/delivery_terms.txt
-  - assets/fag.txt
-  - assets/desc_az.txt
-  - assets/delivery_terms_az.txt
-  - assets/desc_ru.txt
-  - assets/delivery_terms_ru.txt
-  - assets/fag_az.txt
-  - assets/fag_ru.txt
-  - images/smwallet/
   - assets/locale/localization_en.json
   - assets/locale/localization_ru.json
   - assets/locale/localization_tr.json
