--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
   #google_maps_webservice: ^0.0.14
   flutter_google_places: ^0.2.2
   image_picker: ^0.6.0+8
-  carousel_slider: ^1.3.0
+  #carousel_slider: ^1.3.0
   #zoomable_image: ^1.3.1
   flutter_markdown: ^0.2.0
   html2md: ^0.3.1
@@ -52,6 +52,7 @@ dependencies:
 # webview_flutter: ^0.3.14+1
   flutter_webview_plugin: ^0.3.8
   dio: ^3.0.3
+  carousel_pro: ^1.0.0
   intro_views_flutter:
 
 
