--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,7 +50,7 @@ dependencies:
   photo_view: ^0.5.0
   flutter_calendar: ^0.0.3
 # webview_flutter: ^0.3.14+1
-  flutter_webview_plugin: ^0.3.8
+  flutter_webview_plugin:
   dio: ^3.0.3
   carousel_pro: ^1.0.0
   intro_views_flutter:
