--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   dio: ^3.0.3
   carousel_pro: ^1.0.0
   connectivity: ^0.4.5
+  fluttertoast: ^3.1.3
   provider: ^2.0.1
   intro_views_flutter:
 
