--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -68,4 +68,5 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.1'
     implementation project(":onlinechatsdk")
+    implementation 'com.facebook.android:facebook-login:[5,6)'
 }
