--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   provider: ^2.0.1
   location: ^2.3.5
   pin_code_view: ^0.2.1
+  flutter_facebook_login: ^3.0.0
   intro_views_flutter:
 
 
