--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -34,7 +34,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.sinam.kendden_shehere"
+        applicationId "az.gov.att.fromvillage"
         minSdkVersion 17
         targetSdkVersion 28
         versionCode 1
@@ -69,4 +69,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.1'
     implementation project(":onlinechatsdk")
     implementation 'com.facebook.android:facebook-login:[5,6)'
+    //implementation fileTree(dir: 'libs', include: ['*.jar'])
 }
+apply plugin: 'io.fabric'
+apply plugin: 'com.google.gms.google-services'
