--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -69,6 +69,8 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.1'
     implementation project(":onlinechatsdk")
     implementation 'com.facebook.android:facebook-login:[5,6)'
+    implementation 'com.google.firebase:firebase-analytics:17.2.0'
+
     //implementation fileTree(dir: 'libs', include: ['*.jar'])
 }
 apply plugin: 'io.fabric'
