--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -70,6 +70,7 @@ dependencies {
     implementation project(":onlinechatsdk")
     implementation 'com.facebook.android:facebook-login:[5,6)'
     implementation 'com.google.firebase:firebase-analytics:17.2.0'
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.10.0'
 
     //implementation fileTree(dir: 'libs', include: ['*.jar'])
 }
