--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,6 +45,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+
 	    <!-- Facebook Login configuration -->
 	    <!--
         <key>CFBundleURLTypes</key>
@@ -69,5 +70,19 @@
             <string>fbshareextension</string>
         </array>
         -->
+        <key>Fabric</key>
+            <dict>
+                <key>APIKey</key>
+                <string>YOUR_ID_HERE</string>
+                <key>Kits</key>
+                <array>
+                    <dict>
+                        <key>KitInfo</key>
+                        <dict/>
+                        <key>KitName</key>
+                        <string>Crashlytics</string>
+                    </dict>
+                </array>
+            </dict>
 </dict>
 </plist>
