--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,7 +60,7 @@ dependencies:
   pin_code_view: ^0.2.1
   flutter_facebook_login: ^3.0.0
   #firebase_crashlytics: ^0.1.0+3
-  #flutter_crashlytics: ^1.0.0
+  flutter_crashlytics: ^1.0.0
   intro_views_flutter:
 
 
