--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   location: ^2.3.5
   pin_code_view: ^0.2.1
   flutter_facebook_login: ^3.0.0
+  carousel_slider: ^1.3.1
   #firebase_crashlytics: ^0.1.0+3
   flutter_crashlytics: ^1.0.0
   intro_views_flutter:
