--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,8 @@ dependencies:
   #geocoder: ^0.1.2
   #map_view: ^0.0.14
   #share: ^0.6.1+1
-  url_launcher:
+  #url_launcher:
+  flutter_open_whatsapp: ^0.1.2
   #google_maps_webservice: ^0.0.14
   flutter_google_places: ^0.2.2
   image_picker: ^0.6.0+8
