--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   #share: ^0.6.1+1
   #url_launcher:
   flutter_open_whatsapp: ^0.1.2
+  flutter_launch:
   #google_maps_webservice: ^0.0.14
   flutter_google_places: ^0.2.2
   image_picker: ^0.6.0+8
